--- a/netTopoAutoCatch/src/switchboard/gethwArpDynTable/Makefile
+++ b/netTopoAutoCatch/src/switchboard/gethwArpDynTable/Makefile
@@ -2,7 +2,7 @@ object=gethwArpDynTable.o
 gethwArpDynTable:$(object)
 	$(cc) -o gethwArpDynTable gethwArpDynTable.o -I $(include) -L $(lib) -lnetsnmp -lbulkwalk
 gethwArpDynTable.o:gethwArpDynTable.c 
-	$(cc) -c gethwArpDynTable.c  -I $(include) -L $(lib) -lnetsnmp -lbulkwalk
+	$(cc) -c gethwArpDynTable.c -g -I $(include) -L $(lib) -lnetsnmp -lbulkwalk
 
 clean:
 	-rm gethwArpDynTable $(object)
